--- a/urbanstory/src/css/sass/composer/style_layout.scss
+++ b/urbanstory/src/css/sass/composer/style_layout.scss
@@ -599,6 +599,31 @@ li.is-hover {
   background: rgba(0,0,0,0.04);
 }
 
+.local-bg-grey-1{
+  background: $c-grey-1;
+}
+.local-bg-grey-2{
+  background: $c-grey-2;
+}
+.local-bg-grey-3{
+  background: $c-grey-3;
+}
+.local-bg-grey-4{
+  background: $c-grey-4;
+}
+.local-bg-grey-5{
+  background: $c-grey-5;
+}
+.local-bg-grey-6{
+  background: $c-grey-6;
+}
+.local-padding{
+  padding: $gutter-l;
+}
 
-
-
+.local-bg-firm-1{
+  background: $c-firm-1;
+}
+.local-color-white{
+  color: white;
+}
